added organisational folders, refactor course API with Pydantic and service layer
