# openapi.json
@@ -16,7 +16,7 @@
     },
     {
       "name": "Course",
-      "description": "Get individual course"
+      "description": "Operation related to individual course"
     },
     {
       "name": "Students",
@@ -29,29 +29,102 @@
   ],
   "components": {
     "schemas": {
-      "Course": {
+      "ErrorResponse":{
+        "type":"object",
+        "properties": {
+          "error":{
+            "type":"string",
+            "example":"Bad request."
+          },
+          "message":{
+            "type":"string",
+            "example":"course_name field is missing"
+          },
+          "field":{
+            "type":"string",
+            "example":"course_id_bus"
+          }
+        }
+      },
+      "CourseResponse": {
         "type": "object",
         "properties": {
-          "course_id": {
+          "course_id_bus": {
             "type": "string"
           },
-          "title": {
+          "course_name": {
             "type": "string"
+          },
+          "course_fee": {
+            "type": "number",
+            "format": "double"
           },
           "description": {
             "type": "string"
           },
-          "start_date": {
+          "schedule": {
             "type": "string"
+          },
+          "start_date": {
+            "type": "string",
+            "format": "date"
           },
           "end_date": {
-            "type": "string"
+            "type": "string",
+            "format": "date"
           },
-          "class_capacity": {
+          "status": {
+            "type": "string",
+            "enum": ["OPEN", "CLOSED","INACTIVE","PENDING"]
+          },
+          "capacity": {
             "type": "integer"
           }
         },
-        "required": ["course_id", "title"]
+        "required": [
+          "course_id_bus",
+          "course_name",
+          "course_fee",
+          "description",
+          "schedule",
+          "start_date",
+          "end_date",
+          "capacity",
+          "status"
+        ]
+      },
+      "CoursePatchRequest": {
+        "type": "object",
+        "properties": {
+          "course_name": {
+            "type": "string"
+          },
+          "course_fee": {
+            "type": "number",
+            "format": "double"
+          },
+          "description": {
+            "type": "string"
+          },
+          "schedule": {
+            "type": "string"
+          },
+          "start_date": {
+            "type": "string",
+            "format": "date"
+          },
+          "end_date": {
+            "type": "string",
+            "format": "date"
+          },
+          "status": {
+            "type": "string",
+            "enum": ["OPEN", "CLOSED","INACTIVE","PENDING"]
+          },
+          "capacity": {
+            "type": "integer"
+          }
+        }
       },
       "Student": {
         "type": "object",
@@ -93,12 +166,15 @@
               "application/json": {
                 "example": {
                   "id": 1,
-                  "course_id": "CSR101",
-                  "title": "Fundamentals of Python",
+                  "course_id_bus": "CSR-1010",
+                  "course_name": "Fundamentals of Python",
+                  "course_fee": "180.80",
                   "description": "Learn Basics of Python",
+                  "schedule":"Monday, 9am - 11am",
                   "start_date": "24/01/25",
                   "end_date": "25/02/25",
-                  "class_capacity": 20
+                  "status": "OPEN",
+                  "capacity": 20
                 },
                 "schema": {
                   "type": "object",
@@ -106,7 +182,7 @@
                     "courses ": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/Course"
+                        "$ref": "#/components/schemas/CourseResponse"
                       }
                     }
                   }
@@ -115,10 +191,24 @@
             }
           },
           "404": {
-            "description": "Course not found."
+            "description": "Course not found.",
+            "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           },
           "500": {
-            "description": "Server connection error."
+            "description": "Server connection error.",
+            "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -179,14 +269,14 @@
         }
       }
     },
-    "/api/v1/courses/{course_id}": {
+    "/api/v1/courses/{course_id_bus}": {
       "get": {
         "operationId": "getOneCourse",
         "tags": ["Course"],
         "description": "Retrieve individual course by the Course ID",
         "parameters": [
           {
-            "name": "course_id",
+            "name": "course_id_bus",
             "in": "path",
             "description": "ID of course to return",
             "required": true,
@@ -200,14 +290,17 @@
             "description": "Retrieve individual course by the Course Id.",
             "content": {
               "application/json": {
-                "example": {
+                 "example": {
                   "id": 1,
-                  "course_id": "CSR101",
-                  "title": "Fundamentals of Python",
+                  "course_id_bus": "CSR-1010",
+                  "course_name": "Fundamentals of Python",
+                  "course_fee": "180.80",
                   "description": "Learn Basics of Python",
+                  "schedule":"Monday, 9am - 11am",
                   "start_date": "24/01/25",
                   "end_date": "25/02/25",
-                  "class_capacity": 20
+                  "status": "OPEN",
+                  "capacity": 20
                 },
                 "schema": {
                   "type": "object",
@@ -215,7 +308,7 @@
                     "courses ": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/Course"
+                        "$ref": "#/components/schemas/CourseResponse"
                       }
                     }
                   }
@@ -228,6 +321,104 @@
           },
           "500": {
             "description": "Error fetching course."
+          }
+        }
+      },
+      "patch": {
+        "description": "Update existing course information",
+        "tags": ["Course"],
+        "operationId": "updateCourse",
+        "parameters": [
+          {
+            "name": "course_id_bus",
+            "in": "path",
+            "description": "ID of course",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                  "course_id_bus": "CSR-1010",
+                  "course_name": "Fundamentals of Python",
+                  "course_fee": "180.80",
+                  "description": "Learn Basics of Python",
+                  "schedule":"Monday, 9am - 11am",
+                  "start_date": "24/01/25",
+                  "end_date": "25/02/25",
+                  "status": "OPEN",
+                  "capacity": 20
+                },
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "course": {
+                    "type": "object",
+                    "items": {
+                      "$ref": "#/components/schemas/CoursePatchRequest"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Course updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CourseResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request.",
+             "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorised request.",
+             "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden request.",
+             "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource not found.",
+            "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         }
       }
